[package]
name = "aoc-2025"
version = "0.1.0"
edition = "2024"

[lib]
name = "aoc_2025"
path ="src/lib.rs"

[[bin]]
name = "day_01_part_01"
path = "src/bin/day_01_part_01.rs"

[[bin]]
name = "day_01_part_02"
path = "src/bin/day_01_part_02.rs"

[[bin]]
name = "day_02_part_01"
path = "src/bin/day_02_part_01.rs"

[[bin]]
name = "day_02_part_02"
path = "src/bin/day_02_part_02.rs"

[dependencies]
fancy-regex = "0.16.2"

